# SearcHRight_technical_assignment

./: .gitignore  pyproject.toml
app/: main.py
app/db/: db_config.py
app/llm/: llm_inference.py
app/preprocess/: preprocess_talent.py
app/vector/: company_matcher.py  document_loader.py  vectorstore.py
